--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,9 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.21.2",
+    "bootstrap-vue-3": "^0.1.6",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12"
   },
