--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "bootstrap-vue-3": "^0.1.6",
