--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "bootstrap-vue": "^2.21.2",
     "bootstrap-vue-3": "^0.1.6",
     "vue": "^3.2.31",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vue3-carousel": "^0.1.36"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.2",
