--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "bootstrap-vue": "^2.21.2",
     "bootstrap-vue-3": "^0.1.6",
     "pinia": "^2.0.14",
+    "vee-validate": "^4.5.11",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12",
     "vue3-carousel": "^0.1.36"
