--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
+    "got": "^12.1.0",
     "jsonwebtoken": "^8.5.1",
     "minimist": "^1.2.6",
     "morgan": "~1.9.1",
